# burning-pro-server

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh
burning-pro-server/: .env  .gitignore  Cargo.toml  template.env
burning-pro-server/.utils/: pre-commit
burning-pro-server/migrations/2018-06-25-073950_create_good_phrases/: down.sql  up.sql
burning-pro-server/migrations/2018-06-25-073950_create_imprudences/: down.sql  up.sql
burning-pro-server/migrations/2018-07-03-082532_seed_good_phrases/: down.sql  up.sql
burning-pro-server/migrations/2018-07-03-082532_seed_imprudences/: down.sql  up.sql
burning-pro-server/migrations/2018-11-02-072619_create_good_phrase_requests/: down.sql  up.sql
burning-pro-server/migrations/2018-11-09-052320_remove_request_columns/: down.sql  up.sql
burning-pro-server/src/: app.rs  lib.rs  main.rs  schema.rs
burning-pro-server/src/admin/: form.rs  mod.rs  person.rs  phrase.rs  phrase_request.rs  tag.rs
burning-pro-server/src/app/: auth.rs  mod.rs  state.rs
burning-pro-server/src/db/: admin.rs  get_good_phrases.rs  get_imprudences.rs  get_rows.rs  get_tags_for_phrase.rs  mod.rs  upsert_entry.rs
burning-pro-server/src/db_update/: mod.rs
burning-pro-server/src/good_phrase/: mod.rs  response.rs
burning-pro-server/src/imprudence/: mod.rs  response.rs
burning-pro-server/src/models/: mod.rs  update.rs
burning-pro-server/templates/: form.html
burning-pro-server/templates/register/: index.html  list.html
burning-pro-server/templates/register/person/: index.html  new.html  post.html  update.html
burning-pro-server/templates/register/phrase/: index.html  new.html  post.html  update.html
burning-pro-server/templates/register/phrase_request/: phrase_request.html
(+6 files in other folders)
