[package]
name = "burning-pro-server"
version = "0.1.20180928"
authors = ["ITSP PBL 2018 Hillclimb team"]
repository = "https://github.com/pbl-2018-hillclimb/burning-pro-server"

[dependencies]
actix = "0.7"
actix-web = "0.7"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.3", features = ["chrono", "r2d2", "sqlite"] }
dotenv = "0.13"
failure = "0.1"
futures = "0.1"
log = "0.4"
pretty_env_logger = "0.2"
r2d2 = "0.8"
serde = "1"
serde_derive = "1"
serde_json = "1"

[badges]
travis-ci = { repository = "pbl-2018-hillclimb/burning-pro-server" }
